--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,17 @@
-# fly.toml app configuration file generated for climbahillmalaga on 2025-01-21T20:49:11+01:00
+# fly.toml app configuration file generated for malagamontes on 2025-01-22T13:13:58+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'climbahillmalaga'
+app = 'malagamontes'
 primary_region = 'mad'
 console_command = '/rails/bin/rails console'
 
 [build]
 
-[deploy]
-  release_command = "./bin/rails db:prepare"
-
-[env]
-  DATABASE_URL = 'sqlite3:///data/production.sqlite3'
-  PORT = '8080'
-
-[processes]
-  app = "./bin/rails server"
-
 [http_service]
-  internal_port = 8080
+  processes = ["app"]
+  internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -41,3 +32,14 @@ console_command = '/rails/bin/rails console'
 
 [[vm]]
   size = 'shared-cpu-1x'
+
+[env]
+  PORT = "8080"
+  DATABASE_URL = "sqlite3:///data/production.sqlite3"
+
+[processes]
+  app = "./bin/rails server"
+
+[deploy]
+  release_command = "./bin/rails db:prepare"
+
